@@ -1,4 +1,4 @@
-3f18b6ac36b5c1942c613bf0babf1d23 *DESCRIPTION
+0b368625983461dcf909348693e53797 *DESCRIPTION
 24285f862ba8a7759ee827ea90f5b290 *NAMESPACE
 56644470b40a9742c0922039e641ca62 *R/abcnonHtest.R
 923a1af6d88140ef2ef9e8fc7adb4752 *R/anovaOneWay.R
@@ -9,19 +9,19 @@ d36f5395e7e73da24ea6ab27a09d0572 *R/meldCD.R
 4c1397524f6cd104f698947bb866f3a9 *R/metaNorm.R
 ef8ad4ba0d9c29539a9d493637c86ae5 *R/prevSeSp.R
 bda45415259ef112d8ce48e5362405d2 *R/quantileTest.R
-b7711cc595966697e37e1c3a50d03c1c *R/signTest.R
+7a6375726f0698f1a549bb35b8b7e3a5 *R/signTest.R
 f5a625abdfeae97fd9fc8edea50da715 *R/tukeyWelsch.R
 fd29c60ae46915eba59c7df2b9727d69 *R/var1Test.R
 65dc3c3610ae2fa68c8a7970e042a600 *R/wmwTest.R
 10bf26f4b9e006dd7e8369b2ed6d44d3 *R/wspoissonTest.R
 2d5a645a6dc2c48f121fdb59799b580d *R/wsrTest.R
 945105acc8a05f9921d565bdfbb1cd57 *data/ama1c1cpg.rda
-bcce5d8619bc57f156f004536f2917e4 *inst/NEWS.Rd
+bd5ca60a12dc2126b6b614eba6c6a9ab *inst/NEWS.Rd
 efc3e0cdc42f9b5977169165f2144733 *man/Vpo.Rd
 09f752991d3946aabd291e7f3b1cda65 *man/abcnonHtest.Rd
 68432d8d838c5bdb04f2279a6ce8d715 *man/ama1c1cpg.Rd
 10d0a30981dd3fca8aedb9b167b94351 *man/anovaOneWay.Rd
-fee633240d030547c5e2fec93ef98079 *man/asht-package.Rd
+97867fa61f21f2448a0b8f000902abd4 *man/asht-package.Rd
 89ef0a27bde43b2448b9b61d534ab0c9 *man/bfControl.Rd
 bc4247db0494ebcc041d723094067b59 *man/bfTest.Rd
 a5ac45714756649532711311dbd8ebfb *man/cvTest.Rd
@@ -33,7 +33,7 @@ adce43f270fbb92bd0d4edf2dfa83bf1 *man/meldtTest.Rd
 f88167ee22b85717537f25fd72754f4c *man/pbf.Rd
 38f490a0ae110472dc06e4cbf6a4ea1a *man/prevSeSp.Rd
 3334567e56f8f7a6885d44a1c8bc1fd9 *man/quantileTest.Rd
-2b7d4c4b08cf5373826e0e2fb21d020e *man/signTest.Rd
+438654ab739554b3c19c3853491e45ec *man/signTest.Rd
 ef3db432222e8eff69c395da734b112c *man/tukeyWelsch.Rd
 24a101d525cec262cd9dcdac8151b614 *man/var1Test.Rd
 e85257409d9d2304e1ee0d44de6dd0e4 *man/wmwControl.Rd
